--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">aeontest</string>
+    <string name="login_title">Login:</string>
+    <string name="password_title">Password:</string>
+    <string name="remember_me_title">Remember me</string>
+    <string name="login_button_text">Login</string>
+    <string name="wrong_login_title">Wrong login and/or password!</string>
 </resources>
