--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="remember_me_title">Remember me</string>
     <string name="login_button_text">Login</string>
     <string name="wrong_login_title">Wrong login and/or password!</string>
+    <string name="logout_menu_title">Logout</string>
+    <string name="successful_login_text">Successful login!</string>
 </resources>
