Login feature pre-test commit. Successful login fragment added. Logout use case added. Deleted wrapper/handler as found them a bad practice. Exception handling moved to functions of View model.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">aeontest</string>
+    <string name="app_name">My Transactions</string>
     <string name="login_title">Login:</string>
     <string name="password_title">Password:</string>
     <string name="remember_me_title">Remember me</string>
